--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,10 @@
     <dimen name="bg_tooltip_padding_right">5dp</dimen>
     <dimen name="bg_tooltip_padding_bottom">10dp</dimen>
     <dimen name="bg_tooltip_pointer_padding_bottom">8dp</dimen>
+    <dimen name="margin">8dp</dimen>
+
+    <dimen name="header_text_size">20sp</dimen>
+    <dimen name="title_text_size">18sp</dimen>
+    <dimen name="button_text_size">16sp</dimen>
+    <dimen name="sample_text_size">12sp</dimen>
 </resources>
