--- a/app/src/main/res/layout/game_result.xml
+++ b/app/src/main/res/layout/game_result.xml
@@ -4,18 +4,29 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="#222326"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/game_over_tv"
+        android:paddingTop="15dip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="GAME OVER"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLargeInverse"
+        />
+<View android:layout_width="match_parent"
+    android:layout_height="80dip" ></View>
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/gamelogactivity_item_rmlayer"
     android:gravity="center"
-    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:textAppearance="?android:attr/textAppearanceLargeInverse"
     />
 <TextView
     android:layout_width="match_parent"
     android:id="@+id/tv_rm_ln"
     android:gravity="center"
-    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:textAppearance="?android:attr/textAppearanceMediumInverse"
     android:layout_height="wrap_content"
 
     />
@@ -23,7 +34,10 @@
         android:layout_width="match_parent"
         android:id="@+id/tv_elap_time"
         android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceSmallInverse"
         android:layout_height="wrap_content" />
+    <View android:layout_width="match_parent"
+        android:layout_height="40dip" ></View>
     <mehdi.sakout.fancybuttons.FancyButton
 
         android:id="@+id/btn_game_restart"
